finished data section questions

--- a/index.html
+++ b/index.html
@@ -395,15 +395,28 @@ disparity still remains.</p>
 </div>
 <div id="the-dataset" class="section level3">
 <h3>The Dataset</h3>
-<p>Who collected the data?<br />
-How was the data collected or generated?<br />
-Why was the data collected?<br />
-How many observations (rows) are in your data?<br />
-How many features (columns) are in the data?<br />
-What, if any, ethical questions or questions of power do you need to
-consider when working with this data?<br />
-What are possible limitations or problems with this data? (at least 200
-words)</p>
+<p>The data used in this report was collected by the <strong>Vera
+Institute</strong>. According to their website, they do research and
+collect this data by working alongside community members and local
+organizations and government. They say that their mission is to is to
+end the overcriminalization and mass incarceration of people of color,
+immigrants, and people experiencing poverty. They do this work in order
+to develop an idea for how to disrupt the incarceration system and its
+devastating impacts. In the prison population and rate datasets there
+are <strong>153,811 observations</strong>. The total prison population
+dataset has <strong>36 features</strong> and the prison population rate
+dataset has <strong>23 features</strong>. Because this dataset deals
+with large numbers and widespread information regarding a historically
+systematic topic like race, there are some questions of power that need
+to be considered. For example, it is important to consider the
+identities of the individuals who collected this data as their own
+personal perspectives could affect what they did/didn’t include.
+Additionally, one may want to consider who has control over this data
+and what may have been withheld or not reported as this can influence
+the accuracy of the reflections of the populations we are observing.
+This connects to limitations the data may have, including the many cells
+of unreported or “NA” data. This can cause issues with data accuracy and
+drawing valid conclusions from the data.</p>
 </div>
 <div id="trends-over-time-chart" class="section level3">
 <h3>Trends Over Time Chart</h3>
