trying to fix map, saving code edits

--- a/index.html
+++ b/index.html
@@ -449,9 +449,9 @@ overwhelming majority of cities.</p>
 </div>
 <div id="map" class="section level3">
 <h3>Map</h3>
-<p>I included this map to create a easy-to-read visual that helps gauge
-various concentrations of Black prison population rates in the United
-States in 2010.</p>
+<p>I included this map to create a easy-to-read visual that helps
+geographically gauge various concentrations of Black prison population
+rates in the United States in 2010.</p>
 <pre><code>## 
 ## Attaching package: &#39;dplyr&#39;</code></pre>
 <pre><code>## The following objects are masked from &#39;package:stats&#39;:
